--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,20 @@
 .cahoots-button {
     display: inline-block;
-    height:26px;
+    height: 26px;
     margin: 0 2px;
+    color: #fff;
+    background-color: #666;
+    border: 1px solid;
+    border-radius: 2px;
+    border-color: #444;
+    cursor: default;
+    font-size: 11px;
+    font-weight: bold;
+    text-align: center;
+    white-space: nowrap;
+    height: 27px;
+    line-height: 27px;
+    min-width: 54px;
+    outline: 0;
+    padding: 0 8px;
 }
